--- a/CommunityBuilder2/CommunityBuilder2/Base.lproj/Main.storyboard
+++ b/CommunityBuilder2/CommunityBuilder2/Base.lproj/Main.storyboard
@@ -282,6 +282,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="PaK-hW-ren"/>
+        <segue reference="odc-ke-k2m"/>
     </inferredMetricsTieBreakers>
 </document>
